test/conformance/chainsaw/exceptions/background-mode/standard/exception-allowed.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: polex-right
spec:
  background: false
  exceptions:
    - policyName: test
      ruleNames:
        - test
  match:
    any:
      - resources:
          kinds:
            - Pods
        subjects:
          - kind: User
            name: chip
