test/conformance/chainsaw/exceptions/background-mode/standard/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: standard
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: exception-allowed.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: exception-rejected.yaml
    - assert:
        file: exception-allowed.yaml
    - error:
        file: exception-rejected.yaml
